--- a/contact.css
+++ b/contact.css
@@ -1,55 +1,3 @@
-body{
-    background-color: #B1D7B4;
-}
-
-/*styling the header */ 
-header{
-    background-color: inherit;
-    height: 15vh;
-    color: white;
-    font-size: 1.5rem;
-    font-family: 'Courier New', Courier, monospace;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-header > h1{
-    background-color: #7FB77E;
-    border: 1px solid #7FB77E; 
-    border-radius: 20px; 
-    padding: 10px 20px;
-}
-
-/* styling the nav bar */ 
-nav .navbar{
-    list-style: none;
-    height: 15vh;
-    display: flex;
-    justify-content: space-evenly;
-}
-
-.navbar > a{
-    border: 1px solid black;
-    border-radius: 20px;
-    padding: 5px 15px;
-    text-decoration: none;
-
-
-    /*flex properties */
-    align-self: center;
-}
-
-.navbar > a:hover{
-    background-color: #FFC090;
-}
-
-a > li{
-    color: black;
-    font-family: 'Courier New', Courier, monospace;
-    font-weight: 600;
-}
-
 /* --------- STYLING MAIN ----------- */ 
 #contact-me{
     text-align: center;
@@ -70,13 +18,15 @@ a > li{
 
 .grid{
     display: grid;
-    grid-template-columns: auto auto;
+    grid-template-columns: 1fr 1fr;
     align-self: flex-end;
 }
 
 .grid > img{
-    width: 200px;
-    height: 200px;
+    /* width: 200px;
+    height: 200px; */
+    width: 10vw;
+    height: 10vw;
     align-self: center; 
     margin-left: 50%; 
 }
@@ -85,6 +35,5 @@ a > li{
     align-self: center;
     color: black;
     font-family: 'Courier New', Courier, monospace;
-    font-weight: 600;
-  
+    font-weight: 600;  
 }
