--- a/styles.css
+++ b/styles.css
@@ -1,61 +1,12 @@
-body{
-    background-color: #B1D7B4;
-}
-
-/*styling the header */ 
-header{
-    background-color: inherit;
-    height: 15vh;
-    color: white;
-    font-size: 1.5rem;
-    font-family: 'Courier New', Courier, monospace;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-header > h1{
-    background-color: #7FB77E;
-    border: 1px solid #7FB77E; 
-    border-radius: 20px; 
-    padding: 10px 20px;
-}
-
-/* styling the nav bar */ 
-nav .navbar{
-    list-style: none;
-    height: 15vh;
-    display: flex;
-    justify-content: space-evenly;
-}
-
-.navbar > a{
-    border: 1px solid black;
-    border-radius: 20px;
-    padding: 5px 15px;
-    text-decoration: none;
-
-
-    /*flex properties */
-    align-self: center;
-}
-
-.navbar > a:hover{
-    background-color: #FFC090;
-}
-
-a > li{
-    color: black;
-    font-family: 'Courier New', Courier, monospace;
-    font-weight: 600;
-}
-
-
 /*styling the main */ 
 .container{
     display: flex;
     gap: 20px;
     margin: 0px 30px;
+}
+
+.container > .about{
+    font-family: 'Courier New', Courier, monospace;
 }
 
 .ronpic{
@@ -77,17 +28,16 @@ a > li{
     margin: 10px;
 }
 
-/*styling the footer */ 
-.foot{
-    display: flex;
-    justify-content: space-between;
-    margin: 0px 20px;
-    height: 200px;
-}
+@media screen and (max-width: 600px) {
+    .container{
+        display: block;
+    }
 
-.foot > h3{
-    font-size: .8rem;
-    align-self: center;
-    font-weight: 600;
+    .ronpic{
+        margin-top: 25px;
+    }
+    .ronpic > img{
+        margin: auto;
+    }
 }
 
