--- a/contact.css
+++ b/contact.css
@@ -2,7 +2,7 @@
 #contact-me{
     text-align: center;
     color: black;
-    font-family: 'Courier New', Courier, monospace;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 600;
     text-decoration: underline;
     margin: 40px;
@@ -34,6 +34,6 @@
 .grid > h3{
     align-self: center;
     color: black;
-    font-family: 'Courier New', Courier, monospace;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 600;  
 }
