--- a/main-styles.css
+++ b/main-styles.css
@@ -1,5 +1,6 @@
 body{
-    background-color: #B1D7B4;
+    /* background-color: #B1D7B4; */
+    background-color: #fefefe;
 }
 
 /*styling the header */ 
@@ -8,15 +9,15 @@ header{
     height: 15vh;
     color: white;
     font-size: 1.5rem;
-    font-family: 'Courier New', Courier, monospace;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
 header > h1{
-    background-color: #7FB77E;
-    border: 1px solid #7FB77E; 
+    background-color: #3A3B3C;
+    border: 1px solid #3A3B3C; 
     border-radius: 20px; 
     padding: 10px 20px;
 }
@@ -41,7 +42,8 @@ nav .navbar{
 }
 
 .navbar > a:hover{
-    background-color: #FFC090;
+    background-color: #d2042d;
+    color: white;
 }
 
 @media screen and (max-width: 600px){
@@ -56,7 +58,7 @@ nav .navbar{
 
 a > li{
     color: black;
-    font-family: 'Courier New', Courier, monospace;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 600;
 }
 
