--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 }
 
 .container > .about{
-    font-family: 'Courier New', Courier, monospace;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .ronpic{
